# acm_rust

./: .gitignore  Cargo.toml  LICENSE  Notes.md  README.md  README.md.pre  m-6-10-data.csv  markdown-tex.py  query.py
doc/tex/: acm.tex  hilbert-a.tex  hilbert-b.tex  hilbert.tex
examples/: acm-cli.rs  acm-cli.yml
img/: 0.tex  1.tex  2.tex  3.tex  compile_images.sh
src/: acm-cli.rs  acm-cli.yml  acm.rs  divisors.rs  factor.rs  factorize.rs  integers.rs  lib.rs  main.rs  main.yml  prime_factors.rs  sieve.rs  traits.rs
tests/: acm.rs  divisors.rs  factor.rs  factorize.rs  prime_factors.rs  tests.rs
tex/: acm.tex  hilbert-a.tex  hilbert-b.tex  hilbert.tex
