[package]
name = "acm"
version = "0.1.3"
authors = ["Nils Olsson <nilso@enosis.net>"]
edition = "2018"
description = "Arithmetic congruence monoid implementation in Rust"
repository = "https://github.com/nilsso/acm_rust/"
documentation = "https://docs.rs/0.1.0/acm/"
homepage = "https://github.com/nilsso/acm_rust/"
readme = "README.md"
license = "MIT"

[lib]
name = "acm"
path = "src/acm.rs"

[[bin]]
name = "acm-cli"
path = "src/acm-cli.rs"

[dependencies]
common_macros = "0.1.1"
clap = { version = "2.33.0", features = ["yaml"] }
failure = "0.1.5"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]
